packages: Update manual changelogs

--- a/distro/ubuntu/dms-git/debian/changelog
+++ b/distro/ubuntu/dms-git/debian/changelog
@@ -1,8 +1,6 @@
-dms-git (0.6.2+git2264.c5c5ce84) questing; urgency=medium
+dms-git (0.6.2+git2419.993f14a3) questing; urgency=medium
 
-  * Add VERSION file creation to all distro packages
-  * Fix Fedora COPR to pass VERSION/COMMIT to make dist
-  * Fix obs-upload.sh auto-increment to preserve git hash and add ppa suffix
-  * Git snapshot (commit 2264: c5c5ce84)
+  * widgets: make dank icon picker a popup
+  * Previous updates included in build
 
- -- Avenge Media <AvengeMedia.US@gmail.com>  Tue, 03 Dec 2025 01:50:00 +0000
+ -- Avenge Media <AvengeMedia.US@gmail.com>  Mon, 09 Dec 2025 14:00:00 +0000
