--- a/distro/debian/dms-git/debian/changelog
+++ b/distro/debian/dms-git/debian/changelog
@@ -1,12 +1,6 @@
-dms-git (0.6.2+git2264.c5c5ce84) nightly; urgency=medium
+dms-git (0.6.2+git2419.993f14a3) nightly; urgency=medium
 
-  * Add VERSION file creation to all distro packages
-  * Fix Fedora COPR to pass VERSION/COMMIT to make dist
-  * Fix obs-upload.sh auto-increment to preserve git hash and add ppa suffix
-  * Fix debian/rules to use source at root level (native format)
-  * Remove incorrect dms-git-source subdirectory references
-  * Build dms binary from source for true git version strings
-  * Match Fedora COPR git build behavior
-  * Add golang-go and make as build dependencies
+  * widgets: make dank icon picker a popup
+  * Previous updates included in build
 
- -- Avenge Media <AvengeMedia.US@gmail.com>  Tue, 03 Dec 2025 01:50:00 +0000
+ -- Avenge Media <AvengeMedia.US@gmail.com>  Mon, 09 Dec 2025 14:00:00 +0000
